# torch-points-kernels

./: .black.toml  .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: building-conda.yml  deploy.yaml  tests.yaml
benchmark/: grisampling.py  region_cluster.py
conda/torch-points-kernels/: README.md  bld.bat  build_conda.sh  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
cpu/include/: ball_query.h  cloud.h  fps.h  gridsampler.h  group_points.h  interpolate.h  knn.h  nanoflann.hpp  neighbors.h  utils.h
cpu/src/: ball_query.cpp  bindings.cpp  fps.cpp  gridsampler.cpp  group_points.cpp  interpolate.cpp  knn.cpp  neighbors.cpp  torch_nearest_neighbors.cpp
cuda/include/: ball_query.h  chamfer_dist.h  cubic_feature_sampling.h  cuda_utils.h  gridding.h  gridding_reverse.h  interpolate.h  metrics.h  utils.h  (+1 more)
test/: speed_radius.py  test_ballquerry.py  test_ballquerry_partial.py  test_chamfer.py  test_chamfer_dist.py  test_cluster.py  test_cubic_feature_sampling.py  test_fps.py  test_gridding.py  test_gridding_reverse.py  test_gridsampler.py  test_grouping.py  test_interpolate.py  test_knn.py  test_metrics.py  test_speed.py
torch_points/: __init__.py  knn.py  knn_interpolate.py  torchpoints.py
torch_points.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
torch_points_kernels/: __init__.py  chamfer_dist.py  cluster.py  cubic_feature_sampling.py  gridding.py  gridding_reverse.py  knn.py  metrics.py  torchpoints.py
(+25 files in other folders)
